[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "prob"
version = "0.1.0"
description = ""
authors = [ "Aditya Gudimella <adgudime@microsoft.com>",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dependencies.docbook]
git = "git@github.com:AdityaGudimella/docbook.git"
